--- a/index.html
+++ b/index.html
@@ -9,11 +9,25 @@
 
    <h1 style="text-align: center;">
     Hey Rayyan, I am active and Online
-    <br/>
-    <br/>
-    <br/>
+    Welcome to my website here you can view my presentation
+    <!-- <a href="https://www.canva.com/design/DAGJhE4Stnw/ul5jMFPO1p3BnGCN-pLE7g/edit?utm_content=DAGJhE4Stnw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">https://www.canva.com/design/DAGJhE4Stnw/ul5jMFPO1p3BnGCN-pLE7g/edit?utm_content=DAGJhE4Stnw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton</a> -->
 
-    mail me  : <a href="mailto:khanparvez8380@gmail.com">khanparvez8380@gmail.com</a>
+    <!-- <iframe src="https://www.canva.com/design/DAGJhE4Stnw/ul5jMFPO1p3BnGCN-pLE7g/edit?utm_content=DAGJhE4Stnw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" ></iframe> -->
+    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+    padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+    border-radius: 8px; will-change: transform;">
+     <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+       src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGJhE4Stnw&#x2F;cca5_wE_jjU5mB0PvcDvEg&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+     </iframe>
+   </div>
+   <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGJhE4Stnw&#x2F;cca5_wE_jjU5mB0PvcDvEg&#x2F;view?utm_content=DAGJhE4Stnw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Travel Tour Presentation</a> by Rayyan Khan
+
+
+
+
+    <br/>
+    <br/>
+    <br/>
     
    </h1>
 </body>
